Adjusted login page(deleted password and adjusted openapi)
